# simple-ray-tracer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  canvas.c  canvas.h  main.c  vec3.c  vec3.h
tests/: CMakeLists.txt  init_canvas_test.c  vec3_add_test.c  vec3_cross_test.c  vec3_div_test.c  vec3_mul_test.c  vec3_norm_test.c  vec3_normalize_test.c  vec3_sub_test.c
